tests/fixtures/invalid/none_lshift_bool.py
# Cannot left shift None and Bool
x: None = None << True
